# docker_cpp_template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  clean_up.sh  run.sh
src/: main.cpp
